# specrails-hub

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICES  README.md  SECURITY.md  package-lock.json  package.json  pkg.config.json  tsconfig.json  vitest.config.ts
.claude/: backlog-cache.json
.githooks/: pre-commit  prepare-commit-msg
.github/: dependabot.yml
cli/: specrails-desktop.test.ts  specrails-desktop.ts  specrails-hub.test.ts  specrails-hub.ts  srm.test.ts  srm.ts
client/: .gitignore  demo.html  index.html  package-lock.json  package.json  tsconfig.json  vite.demo.config.ts  vitest.config.ts
design_handoff_specrails_web/: README.md  SpecRails Redesign.html
docs/: README.md  adding-a-provider.md  ask-the-hub.md  cli.md  codex.md  creating-specs.md  customizing.md  getting-started.md  jira-integration-plan.md  macos.md  profiles-quick-start.md  running-pipelines.md  terminal-panel.md  terminal.md  tracking-cost.md  windows.md
scripts/: assemble-runtimes-local.mjs  build-sidecar.mjs  check-core-compat.ts  fix-desktop-bundle.mjs  generate-icons.mjs  generate-mobile-types.mjs  obfuscate-chromium.mjs  patch-node-pty.mjs  sign-chromium-macos.sh  smoke-bundled-runtimes.sh
server/: agent-generator.ts  agent-refine-db.test.ts  agent-refine-db.ts  agent-refine-manager.test.ts  agent-refine-manager.ts  agent-refine-routes.test.ts  ai-invocations.test.ts  ai-invocations.ts  analytics.test.ts  analytics.ts  ask-router.test.ts  ask-router.ts  attachment-manager.test.ts  attachment-manager.ts  auth.test.ts  auth.ts  binary-probe.test.ts  binary-probe.ts  browser-capture-manager.test.ts  (+171 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/embeddings/multilingual-e5-small/: config.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1208 files in other folders)
