[package]
name = "specrails-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "specrails_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "specrails-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# NOTE: devtools/Inspect Element is intentionally NOT force-enabled here. Tauri
# auto-enables devtools in debug builds (debug_assertions), so dev keeps the
# inspector while release builds ship WITHOUT it — this both removes the
# "embedded web page" Inspect Element entry from production and avoids shipping
# the WKWebView private devtools API (a macOS App Store blocker).
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
dirs-next = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
